# src/controllers/userController.ts
@@ -1,6 +1,6 @@
 import { Request, Response } from 'express'
 import { User } from 'src/models'
-import { registerUser } from 'src/services/authService'
+import { authorizeUser, generateToken, registerUser } from 'src/services/authService'
 import { responses } from 'src/utils'
 
 export const register = async (req: Request, res: Response) => {
@@ -15,8 +15,17 @@ export const register = async (req: Request, res: Response) => {
   }
 }
 
-export const logIn = async (_: Request, res: Response) => {
-  return responses.notImplemented(res)
+export const logIn = async (req: Request, res: Response) => {
+  const { username, password } = req.body
+  try {
+    if (!username || !password) throw new Error('Missing username or password.')
+    const user: User = await authorizeUser(username, password)
+    const token: string = await generateToken(user)
+
+    return responses.ok(res, { user, token })
+  } catch (error: any) {
+    return responses.badRequest(res, error?.message)
+  }
 }
 
 export const getUser = async (_: Request, res: Response) => {
