# src/docs/swagger_output.json
@@ -19,6 +19,10 @@
       "description": "General endpoints"
     },
     {
+      "name": "User",
+      "description": "User management"
+    },
+    {
       "name": "Authentication",
       "description": "Used to login to Spotify"
     },
@@ -234,6 +238,23 @@
         "responses": {
           "default": {
             "description": ""
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "username": {
+                    "example": "any"
+                  },
+                  "password": {
+                    "example": "any"
+                  }
+                }
+              }
+            }
           }
         }
       }
